# conway

./: .gitignore  README.md  Sample_20240731_160927.json  Sample_Analyst_20240801_121632.json  Sample_Input.json  Sample_Input_IN.json  Sample_Input_SCO.json  Sample_Output.txt  Sample_Output_20240801_090003.json  Sample_Output_20240801_094624.json  Sample_Response.json  app.py  auto_conway.py  change_analyst.py  change_critic.py  conway.py  grade.py  models.py  openai-test.py  organization.json  prompts.py  pyproject.toml  requirements.txt  teams.py  teams2.py
.cache/41/: cache.db-shm
agents/: change_analyst.py  conway.py  dependency_analyzer.py  integration_specialist.py  multi_team.py  north_star_grader.py  team_classifier.py  team_writer.py
sample_data/: Expected Touchpoints.json  Sample_20240731_160927.json  Sample_Analyst.json  Sample_CloudFoundation.json  Sample_CloudPlatform.json  Sample_Delivery.json  Sample_DevX.json  Sample_Enablement.json  Sample_Observability.json  Sample_Output.txt  Viz.json  Viz2.json  Viz3.json  organization.json
sample_data/team_apis/: Sample_CloudFoundation.json  Sample_CloudPlatform.json  Sample_Delivery.json  Sample_DevX.json  Sample_Enablement.json  Sample_Observability.json  Sample_Security.json  Sample_SelfCheckout.json
temp/: tmp0w6ad75c.json  tmp3sdo_07i.json
templates/: create.html  form.html  grade.html  index.html  result.html  start.html  viz.html  viz2.html
workflows/: Cloud_Customer_Support.json
