[tool.poetry]
name = "team-api-ai"
version = "0.1.0"
description = ""
authors = ["Adam Terlson"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
openai = "^1.40.6"
pymongo = "^4.8.0"
flask-caching = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
